[package]
name = "raytracer-challenge"
version = "0.1.0"
authors = ["Rossebø, Håkon <Hakon.Rossebo@mhwirth.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
piston2d-graphics = "0.34.0"
piston_window = "0.103.0"
image = "0.22.1"
